# ai-research-notes

./: .gitignore  404.html  CLAUDE.md  EXPERIMENT_TEMPLATE.md  NYUAD_PROGRESS.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/skills/arxiv-paper-reader/: SKILL.md
.github/workflows/: deploy-docs.yml
computer-vision/: index.html
computer-vision/yolo-evolution/: index.html
computer-vision/yolov1-paper-notes/: index.html
docs/: index.md
docs/computer-vision/: index.md  yolo-evolution.md  yolov1-paper-notes.md
docs/javascripts/: katex.js
docs/vision-transformers/: attention-paper-notes.md  index.md  pretrain-vs-scratch.md  vit-paper-notes.md
docs/world-models/: index.md  vmc-pipeline.md
search/: search_index.json
tests/: test_controller.py  test_iou.py  test_mdn_rnn.py  test_vae.py
topics/: NYUAD.md
topics/computer-vision/docs/: implementation_guide.md
topics/computer-vision/resources/: learning_log.md
topics/embodied-ai/: CLAUDE.md
topics/jepa/: CLAUDE.md
topics/reinforcement-learning/: CLAUDE.md
topics/self-supervised-learning/: CLAUDE.md
topics/vision-transformers/: CLAUDE.md
topics/vision-transformers/notes/: attention_transformer.md  vit_summary.md  wb_report_ablation_study.md  wb_report_pretrain_vs_scratch.md
topics/world-models/: CLAUDE.md
vision-transformers/: index.html
vision-transformers/attention-paper-notes/: index.html
vision-transformers/pretrain-vs-scratch/: index.html
vision-transformers/vit-paper-notes/: index.html
world-models/: index.html
world-models/vmc-pipeline/: index.html
(+36 files in other folders)
